---------------------------------------------------------------------------------------------------
Version: 17.1.3
Date: 2019-11-28
  Features:
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.1.2
Date: 2019-11-19
  Features:
    - Update to .17
    - Santa has a toggleable and configurable inventory
  Changes:
    - Only an admin can issue Santa commands
  Bugfixes:
    - Add missing Santa Takeoff Method setting localisation
  Info:
    - Move to generic utility library from bespoke functions
    - General modernisation of mod structure
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2019-01-01
  Bugfixes:
    - Departing smoke could generate too late to completely hide santa
  Info:
    - Tidy up codebase comments and documentation for publication
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2018-12-30
  Features:
    - Initial Release
    - Biter Santa activated on command with static entity graphics