@@ -1,5 +1,6 @@
 [entity-name]
 biter_santa_landed=Biter Santa
+biter_santa_flying=Biter Santa
 
 
 [api-description]
